--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>AluraGeek Commerce</title>
+
         <meta name="description" content="AluraGeek Commerce where you'll find the best videogames to purchase">
         <meta name="author" content="Pablo Galante">
         <meta property="og:title" content="AluraGeek Commerce">
@@ -13,8 +15,30 @@
         <link rel="icon" href="/favicon.ico">
         <link rel="icon" href="/favicon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+        <link rel="stylesheet" href="./styles/normalize.css">
+        <link rel="stylesheet" href="https://use.typekit.net/yzt0jby.css">
+        <link rel="stylesheet" href="./styles/index.css">
     </head>
     <body>
-    
+        <header>
+            <nav class="navbar">
+                <img src="./resources/img/logo.png" alt="AluraGeek Logo" class="nav-img logo" />
+                <img src="./resources/img/barra_de_busqueda.png" alt="Barra de Busqueda" class="nav-img search" />
+                <button type="button" class="login-button">Login</button>
+            </nav>
+        </header>
+        <div>
+
+        </div>
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+        <footer>
+
+        </footer>
     </body>
 </html>
