--- a/index.html
+++ b/index.html
@@ -25,11 +25,16 @@
             <nav class="navbar">
                 <img src="./resources/img/logo.png" alt="AluraGeek Logo" class="nav-img logo" />
                 <img src="./resources/img/barra_de_busqueda.png" alt="Barra de Busqueda" class="nav-img search" />
-                <button type="button" class="login-button">Login</button>
+                <button type="button" class="nav-login-button">Login</button>
             </nav>
         </header>
-        <div>
-
+        <div class="banner">
+            <div class="banner-block">
+                <h2 class="banner-title">Agosto Promocional</h2>
+                <p class="banner-text">Productos seleccionados con 33% de descuento</p>
+                <br/>
+                <button type="button" class="banner-button">Ver Consolas</button>
+            </div>
         </div>
         <section>
 
