--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
         <link rel="stylesheet" href="./styles/normalize.css">
         <link rel="stylesheet" href="https://use.typekit.net/yzt0jby.css">
-        <link rel="stylesheet" href="./styles/index.css">
+        <link rel="stylesheet" href="./styles/Index/index.css">
     </head>
     <body>
+
         <header>
             <nav class="navbar">
                 <img src="./resources/img/logo.png" alt="AluraGeek Logo" class="nav-img logo" />
@@ -28,6 +29,7 @@
                 <button type="button" class="nav-login-button">Login</button>
             </nav>
         </header>
+
         <div class="banner">
             <div class="banner-block">
                 <h2 class="banner-title">Agosto Promocional</h2>
@@ -36,9 +38,146 @@
                 <button type="button" class="banner-button">Ver Consolas</button>
             </div>
         </div>
-        <section>
 
+        <section class="catalogue">
+
+            <div class="sub-catalogue">
+                <div class="title">
+                    <h3>Star-Wars</h3>
+                    <span>Ver todo <img src="./resources/img/arrow.svg" alt="Flecha" /></span>
+                </div>
+                <div class="articles">
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/star-wars/star-wars-1.png" alt="Star-Wars 1"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/star-wars/star-wars-2.png" alt="Star-Wars 2"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/star-wars/star-wars-3.png" alt="Star-Wars 3"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/star-wars/star-wars-4.png" alt="Star-Wars 4"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/star-wars/star-wars-5.png" alt="Star-Wars 5"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/star-wars/star-wars-6.png" alt="Star-Wars 6"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="sub-catalogue">
+                <div class="title">
+                    <h3>Consolas</h3>
+                    <span>Ver todo <img src="./resources/img/arrow.svg" alt="Flecha" /></span>
+                </div>
+                <div class="articles">
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/consolas/consolas-1.png" alt="Consolas 1"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/consolas/consolas-2.png" alt="consolas 2"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/consolas/consolas-3.png" alt="consolas 3"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/consolas/consolas-4.png" alt="consolas 4"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/consolas/consolas-5.png" alt="consolas 5"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/consolas/consolas-6.png" alt="consolas 6"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="sub-catalogue">
+                <div class="title">
+                    <h3>Diversos</h3>
+                    <span>Ver todo <img src="./resources/img/arrow.svg" alt="Flecha" /></span>
+                </div>
+                <div class="articles">
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/diversos/diversos-1.png" alt="diversos 1"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/diversos/diversos-2.png" alt="diversos 2"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/diversos/diversos-3.png" alt="diversos 3"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/diversos/diversos-4.png" alt="diversos 4"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/diversos/diversos-5.png" alt="diversos 5"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                    <div class="product">
+                        <img src="./resources/img/catalogue-products/diversos/diversos-6.png" alt="diversos 6"/>
+                        <p>Producto XYZ</p>
+                        <p>$ 60,00</p>
+                        <a>Ver Producto</a>
+                    </div>
+                </div>
+            </div>
+            
         </section>
+
         <section>
 
         </section>
