--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <header>
             <nav class="navbar">
-                <img src="./resources/img/logo.png" alt="AluraGeek Logo" class="nav-img logo" />
+                <img src="./resources/img/logo.png" alt="AluraGeek Logo" class="header-logo" />
                 <img src="./resources/img/barra_de_busqueda.png" alt="Barra de Busqueda" class="nav-img search" />
                 <button type="button" class="nav-login-button">Login</button>
             </nav>
@@ -44,44 +44,44 @@
             <div class="sub-catalogue">
                 <div class="title">
                     <h3>Star-Wars</h3>
-                    <span>Ver todo <img src="./resources/img/arrow.svg" alt="Flecha" /></span>
+                    <a href="">Ver todo <img src="./resources/img/arrow.svg" alt="Flecha" /></a>
                 </div>
                 <div class="articles">
                     <div class="product">
                         <img src="./resources/img/catalogue-products/star-wars/star-wars-1.png" alt="Star-Wars 1"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/star-wars/star-wars-2.png" alt="Star-Wars 2"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/star-wars/star-wars-3.png" alt="Star-Wars 3"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/star-wars/star-wars-4.png" alt="Star-Wars 4"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/star-wars/star-wars-5.png" alt="Star-Wars 5"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/star-wars/star-wars-6.png" alt="Star-Wars 6"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                 </div>
             </div>
@@ -89,44 +89,44 @@
             <div class="sub-catalogue">
                 <div class="title">
                     <h3>Consolas</h3>
-                    <span>Ver todo <img src="./resources/img/arrow.svg" alt="Flecha" /></span>
+                    <a href="">Ver todo <img src="./resources/img/arrow.svg" alt="Flecha" /></a>
                 </div>
                 <div class="articles">
                     <div class="product">
                         <img src="./resources/img/catalogue-products/consolas/consolas-1.png" alt="Consolas 1"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/consolas/consolas-2.png" alt="consolas 2"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/consolas/consolas-3.png" alt="consolas 3"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/consolas/consolas-4.png" alt="consolas 4"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/consolas/consolas-5.png" alt="consolas 5"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/consolas/consolas-6.png" alt="consolas 6"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                 </div>
             </div>
@@ -134,55 +134,72 @@
             <div class="sub-catalogue">
                 <div class="title">
                     <h3>Diversos</h3>
-                    <span>Ver todo <img src="./resources/img/arrow.svg" alt="Flecha" /></span>
+                    <a href="">Ver todo <img src="./resources/img/arrow.svg" alt="Flecha" /></a>
                 </div>
                 <div class="articles">
                     <div class="product">
                         <img src="./resources/img/catalogue-products/diversos/diversos-1.png" alt="diversos 1"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/diversos/diversos-2.png" alt="diversos 2"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/diversos/diversos-3.png" alt="diversos 3"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/diversos/diversos-4.png" alt="diversos 4"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/diversos/diversos-5.png" alt="diversos 5"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                     <div class="product">
                         <img src="./resources/img/catalogue-products/diversos/diversos-6.png" alt="diversos 6"/>
                         <p>Producto XYZ</p>
                         <p>$ 60,00</p>
-                        <a>Ver Producto</a>
+                        <a href="">Ver Producto</a>
                     </div>
                 </div>
             </div>
-            
-        </section>
-
-        <section>
 
         </section>
+
+        <section class="pre-footer">
+            <div class="container">
+                <img src="./resources/img/logo.png" alt="AluraGeek Logo" class="footer-logo" />
+                <div class="links">
+                    <a href="">Quienes Somos</a>
+                    <a href="">Politica de Privacidad</a>
+                    <a href="">Programa de Fidelidad</a>
+                    <a href="">Nuestras Tiendas</a>
+                    <a href="">Quiero ser franquiciado</a>
+                    <a href="">Anuncie aqui</a>
+                </div>
+                <form class="formulario">
+                    <p>Hable con nosotros</p>
+                    <input type="text" class="input-nombre" placeholder="Nombre" />
+                    <input type="textarea" class="input-texto" placeholder="Escribe tu mensaje" />
+                    <button type="submit" class="input-button">Enviar Mensaje</button>
+                </form>
+            </div>
+        </section>
+
         <footer>
-
+            <h5>Desarrollado por Pablo Galante - 2022</h5>
         </footer>
     </body>
 </html>
